Knife tool: some future points are drawn incorrectly #71578

Closed
opened 2019-11-14 17:43:37 +01:00 by Stanislav Blinov · 9 comments

System Information
Operating system: 5.3.8-arch1-1 x86_64
Graphics card: GTX 980Ti (435.21)

Blender Version
Broken: 2.80, 2.81, 2.82 (up to and including 8ff9eb97fb)
Worked: 2.79b

Short description of error

Sometimes the knife tool shows future points at unexpected locations (i.e. object center instead of a vertex)
Demo video

Exact steps for others to reproduce the error

2.81 file: knife_leaky_points.blend

  1. Load the .blend
  2. Go into edit mode on the mesh
  3. Use the knife tool and try cutting the mesh in various directions

Some of the points won't be drawn at vertices/edges, but instead show up at object center.

**System Information** Operating system: 5.3.8-arch1-1 x86_64 Graphics card: GTX 980Ti (435.21) **Blender Version** Broken: 2.80, 2.81, 2.82 (up to and including 8ff9eb97fb7c) Worked: 2.79b **Short description of error** Sometimes the knife tool shows future points at unexpected locations (i.e. object center instead of a vertex) [Demo video ](https://youtu.be/IkU4rdvbYOo) **Exact steps for others to reproduce the error** 2.81 file: [knife_leaky_points.blend](https://archive.blender.org/developer/F8077334/knife_leaky_points.blend) 1. Load the .blend 2. Go into edit mode on the mesh 3. Use the knife tool and try cutting the mesh in various directions Some of the points won't be drawn at vertices/edges, but instead show up at object center.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.

Can confirm.

Added subscriber: @vademenev

Added subscriber: @vademenev
Frank Bessou self-assigned this 2019-12-16 11:33:36 +01:00
Frank Bessou was unassigned by Dalai Felinto 2019-12-23 13:43:47 +01:00

Added subscriber: @FrankBessou

Added subscriber: @FrankBessou

This issue was referenced by 765f2a1bca

This issue was referenced by 765f2a1bcaa70e28afd73162e4d6ec1493d13ab2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-03-04 16:50:29 +01:00

Added subscriber: @rjg

Added subscriber: @rjg

This may not have been fully fixed or a later commit reintroduced the issue. I can reproduce the problem in current master, see #83391 @JacquesLucke.

This may not have been fully fixed or a later commit reintroduced the issue. I can reproduce the problem in current master, see #83391 @JacquesLucke.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71578
No description provided.