Fix T71578: knife tool draws some points incorrectly

D6417 by @fbessou